# sqlitepp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.markdown
.github/workflows/: build.yaml
cmake/: CodeCoverage.cmake  CustomConfigurationType.cmake  ImportGoogleTest.cmake  ImportSQLite3.cmake  SQLiteppConfig.cmake.in
scripts/: collect_llvm_coverage.sh  lcovrc  run_valgrind.sh
sqlitepp/: CMakeLists.txt
sqlitepp/include/sqlitepp/: connection.hpp  sqlite3_errc.hpp  sqlite3_error.hpp  sqlitepp_errc.hpp  sqlitepp_error.hpp  statement.hpp  types.hpp  version.hpp
sqlitepp/include/sqlitepp/detail/: conn_handle_adapter.hpp  connection_impl.hpp  converter.hpp  sqlite3.hpp  sqlite3_error_category.hpp  sqlitepp_error_category.hpp  statement_impl.hpp
sqlitepp/test/: CMakeLists.txt  connection_system_test.cpp  connection_unit_test.cpp  sqlite3_error_test.cpp  sqlite3_test.cpp  sqlite3ext_stub.hpp  sqlite3ext_test.cpp  sqlitepp_error_test.cpp  statement_unit_test.cpp
